// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeriesAbout snapshots Renders properly 1`] = `
.c0 {
  position: relative;
  width: 100%;
  color: black;
}

.c0 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,#333 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c0 a:hover {
  color: #C2C2C2;
  opacity: 1;
}

.c0 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c0 p,
.c0 ul,
.c0 ol,
.c0 .paragraph,
.c0 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c0 p:first-child,
.c0 .paragraph:first-child,
.c0 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c0 p:last-child,
.c0 .paragraph:last-child,
.c0 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c0 ul,
.c0 ol {
  padding-left: 1em;
}

.c0 ul {
  list-style: disc;
}

.c0 ol {
  list-style: decimal;
}

.c0 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c0 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c0 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c0 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c0 h2 a {
  background-size: 1.25px 1px;
}

.c0 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c0 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c0 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c0 h3 a {
  background-size: 1.25px 1px;
}

.c0 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c0 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c0 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c0 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c0 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media (max-width:600px) {
  .c0 p,
  .c0 ul,
  .c0 ol,
  .c0 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c0 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c0 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c0 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c0 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c0 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c0 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c0 .content-start {
    font-size: 55px;
  }
}

<div
  className="sc-ifAKCX dYrUUk"
  color="black"
  width="100%"
>
  <div
    className="sc-ifAKCX kwmuuS"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-bZQynM bOrPFB sc-EHOje bJkZDO"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      About the Series
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    />
  </div>
  <div
    className="sc-ifAKCX gkTgYS"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c0"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    />
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with editDescription 1`] = `
.c0 {
  position: relative;
  width: 100%;
  color: black;
}

.c0 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,#333 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c0 a:hover {
  color: #C2C2C2;
  opacity: 1;
}

.c0 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c0 p,
.c0 ul,
.c0 ol,
.c0 .paragraph,
.c0 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c0 p:first-child,
.c0 .paragraph:first-child,
.c0 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c0 p:last-child,
.c0 .paragraph:last-child,
.c0 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c0 ul,
.c0 ol {
  padding-left: 1em;
}

.c0 ul {
  list-style: disc;
}

.c0 ol {
  list-style: decimal;
}

.c0 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c0 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c0 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c0 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c0 h2 a {
  background-size: 1.25px 1px;
}

.c0 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c0 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c0 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c0 h3 a {
  background-size: 1.25px 1px;
}

.c0 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c0 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c0 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c0 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c0 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media (max-width:600px) {
  .c0 p,
  .c0 ul,
  .c0 ol,
  .c0 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c0 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c0 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c0 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c0 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c0 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c0 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c0 .content-start {
    font-size: 55px;
  }
}

<div
  className="sc-ifAKCX dYrUUk"
  color="black"
  width="100%"
>
  <div
    className="sc-ifAKCX kwmuuS"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-bZQynM bOrPFB sc-EHOje bJkZDO"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      About the Series
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    />
  </div>
  <div
    className="sc-ifAKCX gkTgYS"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="article__text-section c0"
      color="black"
    >
      <div>
        Child 
        description
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    />
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with editSubTitle 1`] = `
.c0 {
  position: relative;
  width: 100%;
  color: black;
}

.c0 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,#333 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c0 a:hover {
  color: #C2C2C2;
  opacity: 1;
}

.c0 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c0 p,
.c0 ul,
.c0 ol,
.c0 .paragraph,
.c0 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c0 p:first-child,
.c0 .paragraph:first-child,
.c0 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c0 p:last-child,
.c0 .paragraph:last-child,
.c0 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c0 ul,
.c0 ol {
  padding-left: 1em;
}

.c0 ul {
  list-style: disc;
}

.c0 ol {
  list-style: decimal;
}

.c0 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c0 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c0 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c0 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c0 h2 a {
  background-size: 1.25px 1px;
}

.c0 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c0 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c0 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c0 h3 a {
  background-size: 1.25px 1px;
}

.c0 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c0 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c0 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c0 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c0 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media (max-width:600px) {
  .c0 p,
  .c0 ul,
  .c0 ol,
  .c0 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c0 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c0 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c0 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c0 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c0 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c0 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c0 .content-start {
    font-size: 55px;
  }
}

<div
  className="sc-ifAKCX dYrUUk"
  color="black"
  width="100%"
>
  <div
    className="sc-ifAKCX kwmuuS"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-bZQynM bOrPFB sc-EHOje bJkZDO"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      <div>
        Child 
        sub_title
      </div>
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    />
  </div>
  <div
    className="sc-ifAKCX gkTgYS"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c0"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    />
  </div>
</div>
`;

exports[`SeriesAbout snapshots Renders with sponsor 1`] = `
.c0 {
  display: block;
}

.c2 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c1 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c3 {
  position: relative;
  width: 100%;
  color: black;
}

.c3 a {
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-image: linear-gradient( to bottom,transparent 0,#333 1px,transparent 0 );
  background-size: 1.25px 4px;
  background-repeat: repeat-x;
  background-position: bottom;
}

.c3 a:hover {
  color: #C2C2C2;
  opacity: 1;
}

.c3 div[class*='ToolTip'] a {
  background-image: none;
  opacity: 1;
  color: inherit;
}

.c3 p,
.c3 ul,
.c3 ol,
.c3 .paragraph,
.c3 div[data-block=true] .public-DraftStyleDefault-block {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: 1em;
  padding-bottom: 1em;
  margin: 0;
  font-style: inherit;
}

.c3 p:first-child,
.c3 .paragraph:first-child,
.c3 div[data-block=true]:first-child .public-DraftStyleDefault-block {
  padding-top: 0;
}

.c3 p:last-child,
.c3 .paragraph:last-child,
.c3 div[data-block=true]:last-child .public-DraftStyleDefault-block {
  padding-bottom: 0;
}

.c3 ul,
.c3 ol {
  padding-left: 1em;
}

.c3 ul {
  list-style: disc;
}

.c3 ol {
  list-style: decimal;
}

.c3 li {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 23px;
  line-height: 1.5em;
  -webkit-font-smoothing: antialiased;
  padding-top: .5em;
  padding-bottom: .5em;
}

.c3 h1 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 40px;
  line-height: 1.1em;
  font-weight: normal;
  padding-top: 107px;
  padding-bottom: 46px;
  margin: 0;
  position: relative;
  text-align: center;
}

.c3 h1::before {
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  position: absolute;
  top: 69px;
  right: calc(50% - 4px);
}

.c3 h2 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 32px;
  line-height: 1.1em;
  font-weight: normal;
  margin: 0;
}

.c3 h2 a {
  background-size: 1.25px 1px;
}

.c3 h2 .LinkWithTooltip__PrimaryLink-s1omtxql-0 {
  background-position: bottom !important;
}

.c3 h3 {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
  font-weight: normal;
  padding-top: 23px;
  margin: 0;
}

.c3 h3 strong {
  font-weight: normal;
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 19px;
  line-height: 1.5em;
}

.c3 h3 a {
  background-size: 1.25px 1px;
}

.c3 blockquote {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 40px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-align: left;
  font-weight: normal;
  padding-top: 46px;
  padding-bottom: 46px;
  margin: 0;
  word-break: break-word;
}

.c3 .content-end {
  display: inline-block;
  content: "";
  width: 8px;
  height: 8px;
  background: black;
  border-radius: 50%;
  margin-left: 12px;
  margin-bottom: 1px;
}

.c3 .artist-follow {
  vertical-align: middle;
  margin-left: 10px;
  cursor: pointer;
  background: none transparent;
}

.c3 .artist-follow::before {
  font-family: "artsy-icons";
  content: "";
  vertical-align: -8.5px;
  line-height: 32px;
  font-size: 32px;
}

.c3 .artist-follow::after {
  content: "Follow";
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  text-transform: none;
}

@media (max-width:720px) {
  .c1 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:600px) {
  .c3 p,
  .c3 ul,
  .c3 ol,
  .c3 div[data-block=true] .public-DraftStyleDefault-block {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c3 li {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 19px;
    line-height: 1.5em;
    -webkit-font-smoothing: antialiased;
  }

  .c3 h1 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 34px;
    line-height: 1.1em;
  }

  .c3 h2 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 32px;
    line-height: 1.1em;
  }

  .c3 h3 {
    font-family: Unica77LLWebRegular,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
    line-height: 1.5em;
  }

  .c3 h3 strong {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 16px;
    line-height: 1.1em;
  }

  .c3 blockquote {
    font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
    font-size: 34px;
    line-height: 1.1em;
    -webkit-font-smoothing: antialiased;
    margin: 0;
  }

  .c3 .content-start {
    font-size: 55px;
  }
}

<div
  className="sc-ifAKCX dYrUUk"
  color="black"
  width="100%"
>
  <div
    className="sc-ifAKCX kwmuuS"
    width={
      Array [
        1,
        1,
        0.3333333333333333,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-bZQynM bOrPFB sc-EHOje bJkZDO"
      fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
      fontSize="28px"
    >
      About the Series
    </div>
    <div
      className="rrm-container rrm-greaterThanOrEqual-md"
    >
      <div
        className="sc-kAzzGY fBsJru"
      >
        <div
          className="PartnerBlock c0"
        >
          <div
            className="c1"
          >
            Presented in Partnership with
          </div>
          <div
            className="c2"
          >
            <a
              href="http://artsy.net"
              onClick={[Function]}
              target="_blank"
            >
              <img
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FAjncVmjZHFM4Z-0b6nPz8A%252FGUCCI.png&width=240&quality=80"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-ifAKCX gkTgYS"
    width={
      Array [
        1,
        1,
        0.6666666666666666,
        0.6666666666666666,
      ]
    }
  >
    <div
      className="SeriesAbout__description"
    >
      <div
        className="article__text-section c3"
        color="black"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <a href='http://artsy.net'>Curabitur blandit</a> tempus porttitor. Donec ullamcorper nulla non metus auctor fringilla. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo.</p><p>Donec sed odio dui. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam quis risus eget urna mollis ornare vel eu leo. Nulla vitae elit libero, a pharetra augue.</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="rrm-container rrm-lessThan-md"
    >
      <div
        className="sc-kAzzGY duZrZH"
      >
        <div
          className="PartnerBlock c0"
        >
          <div
            className="c1"
          >
            Presented in Partnership with
          </div>
          <div
            className="c2"
          >
            <a
              href="http://artsy.net"
              onClick={[Function]}
              target="_blank"
            >
              <img
                src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FAjncVmjZHFM4Z-0b6nPz8A%252FGUCCI.png&width=240&quality=80"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
